--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -2,27 +2,16 @@
     <div class="row">
         <h1 style="text-align: center">Create a New Campground</h1>
         <div style="width: 30%; margin: 25px auto;">
-            <form action="/campgrounds" method="POST">
+            <form action="/campgrounds" method="POST" enctype="multipart/form-data">
                 <div class="form-group">
-                    <label for="name">Name</label>
-                    <input class="form-control" type="text" name="name" id="name" placeholder="Yosemite">
+                    <input class="form-control" type="text" name="campground[name]" placeholder="name">
                 </div>
                 <div class="form-group">
-                    <label for="image">Image Url</label>
-                    <input class="form-control" type="text" name="image" id="image" pattern="^https:\/\/images\.unsplash\.com\/.*" title="Only images from images.unsplash.com allowed. See link below for instructions." placeholder="https://images.unsplash.com/..." required>
-                    <small>Click <a href="https://youtu.be/Bn3weNRQRDE">here</a> for tutorial on how to copy unsplash urls.</small>
+                    <label for="image">Image</label>
+                    <input type="file" id="image" name="image" accept="image/*" required>
                 </div>
                 <div class="form-group">
-                    <label for="cost">Cost</label>
-                    <input class="form-control" type="number" name="cost" id="cost" placeholder="9.99" step="0.01" min="0" required>
-                </div>
-                <div class="form-group">
-                    <label for="location">Location</label>
-                    <input class="form-control" type="text" name="location" id="location" placeholder="Yosemite National Park, CA">
-                </div>
-                <div class="form-group">
-                    <label for="description">Description</label>
-                    <input class="form-control" type="text" name="description" id="description" placeholder="California’s Sierra Nevada mountains.">
+                    <input class="form-control" type="text" name="campground[description]" placeholder="description">
                 </div>
                 <div class="form-group">
                     <button class="btn btn-lg btn-primary btn-block">Submit!</button>
@@ -32,4 +21,3 @@
         </div>
     </div>
 <% include ../partials/footer %>
-
